# c_link_innonation_hackathon_submission

./: README.md  c_link_code.ipynb
blockchain/: Cargo.toml
blockchain/.ipynb_checkpoints/: c_link_code-checkpoint.ipynb
blockchain/node/: Cargo.toml
blockchain/node/src/: chain_spec.rs  command.rs
blockchain/pallets/pallet-talent-contract/: Cargo.toml  README.md
blockchain/pallets/pallet-talent-contract/src/: lib.rs  tests.rs
blockchain/runtime/: Cargo.toml
blockchain/runtime/src/: lib.rs
