[package]
name = "pallet-talent-contract"
version = "0.2.0"
authors = ["icodezjb"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.119", optional = true }
log = { version = "0.4.14", default-features = false }
frame-support = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.8", default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.8", default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.8", default-features = false }
sp-std = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.8", default-features = false }
sp-core = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.8", default-features = false }

[dev-dependencies]
serde = { version = "1.0.119" }
hex-literal = { version = "0.3.1"}
sp-io = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.8" }
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.8" }

[features]
default = ['std']
std = [
    'codec/std',
    'serde/std',
    'log/std',
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    'sp-std/std',
    'sp-core/std'
]
